// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntegrationListRow should display an early access integration link 1`] = `
<a
  class="component link card d-flex flex-row align-items-center"
  href="http://www.foo.bar"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="icon d-flex align-items-center justify-content-center"
  >
    <i
      class="icon d-inline-block material-icons"
    >
      live_help
    </i>
  </div>
  <div
    class="flex-grow mr-1"
  >
    <div
      class="d-flex align-items-start"
    >
      <h5
        class="title"
      >
        an integration
      </h5>
    </div>
    this is a cool integration
  </div>
  <div>
    <div
      class="action"
    >
      <span
        class="earlyAccess"
      >
        Register for early access
      </span>
      <i
        class="material-icons md-1"
      >
        open_in_new
      </i>
    </div>
  </div>
</a>
`;

exports[`IntegrationListRow should display an external integration 1`] = `
<a
  class="component link card d-flex flex-row align-items-center"
  href="http://www.foo.bar"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="icon d-flex align-items-center justify-content-center"
  >
    <i
      class="icon d-inline-block material-icons"
    >
      live_help
    </i>
  </div>
  <div
    class="flex-grow mr-1"
  >
    <div
      class="d-flex align-items-start"
    >
      <h5
        class="title"
      >
        an integration
      </h5>
    </div>
    this is a cool integration
  </div>
  <div>
    <div
      class="action"
    >
      <i
        class="material-icons md-1"
      >
        open_in_new
      </i>
    </div>
  </div>
</a>
`;

exports[`IntegrationListRow should display an integration with upgrade requirement 1`] = `
<div
  class="component card d-flex flex-row align-items-center"
>
  <div
    class="icon d-flex align-items-center justify-content-center"
  >
    <i
      class="icon d-inline-block material-icons"
    >
      live_help
    </i>
  </div>
  <div
    class="flex-grow mr-1"
  >
    <div
      class="d-flex align-items-start"
    >
      <h5
        class="title"
      >
        an integration
      </h5>
      <div
        class="ml-3 py-0 px-1"
      >
        <div
          class="d-flex align-items-center upgradeLink"
        >
          <a
            to="[object Object]"
          >
            <button
              class="upgradeButton sm invertedColors btn btn-outline-warning"
              type="button"
            >
              <span
                class="mr-2 upgradeLabel sm"
              >
                Upgrade
              </span>
              <img
                alt="upgrade-icon"
                class="upgradeIcon sm"
                src="test-file-stub"
              />
            </button>
          </a>
        </div>
      </div>
    </div>
    this is a cool integration
  </div>
</div>
`;

exports[`IntegrationListRow should display the integration row as a link 1`] = `
<a
  class="component link card d-flex flex-row align-items-center"
  to="/app/settings/integrations/undefined"
>
  <div
    class="icon d-flex align-items-center justify-content-center"
  >
    <i
      class="icon d-inline-block material-icons"
    >
      live_help
    </i>
  </div>
  <div
    class="flex-grow mr-1"
  >
    <div
      class="d-flex align-items-start"
    >
      <h5
        class="title"
      >
        an integration
      </h5>
    </div>
    this is a cool integration
  </div>
  <div>
    <div
      class="action"
    >
      <i
        class="material-icons md-1"
      >
        navigate_next
      </i>
    </div>
  </div>
</a>
`;
